Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -10,4 +10,4 @@ The transmem project is currently in an embryonic stage and there is much work t
   * Automate (through the tm header) turning the memory model on/off.
   * Automate some (limited for now) statistics gathering.
   
-  * Possibly transactionify the ParSec benchmarks?
+  * Possibly transactionify the Parsec benchmarks?
