--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -4,6 +4,7 @@
 The transmem project is currently in an embryonic stage and there is much work that needs to be done to build the project into something better. The following list contains suggestions for future improvements. 
 
   * Test against all current STAMP benchmarks for functionality.
+    (kmeans(y), genome(-), labyrinth(-), bayes(-), vacation(-))
   * Add early release pragma for labyrinth (Lee's TM).
   * Code tidy-up effort.
   * Stall handling, pass values back to stall the memory accesses.
