--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -11,6 +11,6 @@ The information provided here is largely applicable only to local ([http://www.c
 
 This guide is split into 3 parts:
 
-* Installing simics (local user specific).
-* Installing and compiling the transmem module.
-* Running the STAMP benchmark suite.
+ *[InstallingSimics Installing simics (local user specific)]
+ *[Installing and compiling the transmem module]
+ *[Running the STAMP benchmark suite]
