--- a/wiki/InstallingSimics.wiki
+++ b/wiki/InstallingSimics.wiki
@@ -1,13 +1,12 @@
 #summary A guide to locally installing simics
 
-= Introduction =
+This guide will walk you through installing Simics on your local machine, this is fairly specific to our local setup in Manchester, so please just install simics as per your user manual as a fail-safe. 
 
-Add your content here.
+# cd /tmp
+# cp /home/stella/simics/install-files/simics-pkg-20-3.0.31-linux.tar .
+# tar -xvf simics-pkg-20-3.0.31-linux.tar
+# cd simics-3.0-install/
+# su
+# ./install-simics.sh 
+  You will be asked for an encryption key which is in /home/stella/simics/key.txt
 
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
