--- a/wiki/InstallingTransmem.wiki
+++ b/wiki/InstallingTransmem.wiki
@@ -1,13 +1,8 @@
 #summary A guide to installing transmem
 
-= Introduction =
+transmem is an embryonic module for experimenting with transactional memory within a full-system simulation environment. The module uses all of the normal simics tricks for emitting extra or special opcodes (i.e the MAGIC instructions, you can search for this term in the simics manual).
 
-Add your content here.
+The current state of transmem is that it allows multi-processor simulations to occur whilst maintaining a lazy-evaluation of transactions (a bit like TCC), and opposite to Log-TM (which is early evaluation). transmem can be used to evaluate benchmarks (such as the STAMP suite), using event driven simulation so that changes to the hardware schemes change the running pattern of the transactions (unlike research carried out using traces, although transmem can also be used to generate traces).
 
+At this early stage I can't stress enough that the code is messy, buggy and not fully evaluated so please use totally at your own risk, I will maintain the codebase and hope others will help out if they are interested.
 
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
