--- a/wiki/InstallingSimics.wiki
+++ b/wiki/InstallingSimics.wiki
@@ -41,3 +41,5 @@ export LM_LICENSE_FILE=/home/stella/simics/licenses/manchester_university-x2009-
 }}}
 
 Thats it simics is now installed and ready to run!
+
+*You can now install [http://code.google.com/p/transmem/w/edit/InstallingTransmem transmem]*
