--- a/wiki/RunningSTAMP.wiki
+++ b/wiki/RunningSTAMP.wiki
@@ -1,13 +1,3 @@
 #summary How to run STAMP benchmarks using transmem
 
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+In order to run STAMP you'll need to download the STAMP benchmarks, available from [http://stamp.stanford.edu/ stamp's website].
